# axatechtask

./: .env example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
docs/: endpoints.http
migrations/: env.py
migrations/versions/: 9c51063b58e8_create_tasks.py
src/: app.py  config.py  main.py
src/blueprints/: tasks_api.py
src/decorators/: __init__.py
src/dto/: task.py
src/models/: __init__.py  task.py
src/routes/: errors.py  health.py  tasks.py
src/services/: task_service.py
tests/: conftest.py
tests/dto/: test_task.py
tests/routes/: test_tasks.py
